src/assets/stylesheets/frontend/components/post.scss
.post-list > .pagination-container {
  margin-top: 20px;
  text-align: center;
}

.post-meta-items {
  color: rgba(0, 0, 0, 0.6);

  .item {
    display: inline-block;
    margin: 2px 1em 2px 0;

    &:last-child {
      margin-right: 0;
    }
  }
}

.post .read-more {
  display: inline-block;
  margin-top: 10px;
}

.post-content {
  img {
    max-width: 100%;
    vertical-align: middle;
  }

  pre {
    overflow: auto;
  }
}

